--- a/FEniCSx tutorial.ipynb
+++ b/FEniCSx tutorial.ipynb
@@ -13,6 +13,14 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "c38edb8c",
+   "metadata": {},
+   "source": [
+    "## Functions"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 2,
    "id": "4e3f84e6",
@@ -204,7 +212,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "f0268ac65e5c427db3417dcbd4cb0e2e",
+       "model_id": "1caa9a8e367843279f3774392e94c723",
        "version_major": 2,
        "version_minor": 0
       },
