--- a/Tutorial/TuxRiders/import mesh.ipynb
+++ b/Tutorial/TuxRiders/import mesh.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 8,
    "id": "fd2ec9c9-c1d5-4085-9563-451764d08999",
    "metadata": {},
    "outputs": [],
@@ -32,7 +32,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 9,
    "id": "46b3f7c3-1187-443f-b5f9-32aeb999e31d",
    "metadata": {},
    "outputs": [],
@@ -48,7 +48,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 10,
    "id": "b19b5d39-41df-4c09-bb03-341d3ce5c987",
    "metadata": {},
    "outputs": [
@@ -84,7 +84,7 @@
    "source": [
     "## cell type: tetrahedron and triangle is choosen in Salome, which step before generate .mesh file.\n",
     "mesh = meshio.read(\"helix.msh\")\n",
-    "meshio.write(\"helix1.xdmf\", create_mesh(mesh, \"tetra\", True))\n",
+    "meshio.write(\"helix.xdmf\", create_mesh(mesh, \"tetra\", True))\n",
     "\n",
     "volume_mesh = create_mesh(mesh, \"tetra\", prune_z=True)\n",
     "face_mesh = create_mesh(mesh, \"triangle\", prune_z=True)\n",
@@ -117,8 +117,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "<dolfinx.mesh.Mesh object at 0x7eff0967a440>\n",
-      "<dolfinx.mesh.MeshTags object at 0x7effb413b700>\n"
+      "<dolfinx.mesh.Mesh object at 0x7fc9b416a6b0>\n",
+      "<dolfinx.mesh.MeshTags object at 0x7fca604733a0>\n"
      ]
     }
    ],
