--- a/Tutorial/Fun_practice.ipynb
+++ b/Tutorial/Fun_practice.ipynb
@@ -1175,14 +1175,46 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "94bc28f9-eb83-4d1a-bfb1-eb73ec62d718",
+   "metadata": {},
+   "source": [
+    "# Print the rotation "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "id": "9bd711da-73d8-45c0-9d63-ff5c5db18ca6",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Rotation has applied for 180 degree\n"
+     ]
+    }
+   ],
+   "source": [
+    "import sys\n",
+    "\n",
+    "total_degree = 0\n",
+    "\n",
+    "for i in list(range(1,19)):\n",
+    "       total_degree += 10  # Incrementing degree by 10 in each step\n",
+    "       sys.stdout.write('\\rRotation has applied for {} degree'.format(total_degree))\n",
+    "       sys.stdout.flush()\n",
+    "print()\n"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "e76ce472-9a5a-4b37-9304-574af2879622",
+   "id": "ab7c85a4-8069-41b8-8f90-af0f6481f3d7",
    "metadata": {},
    "outputs": [],
-   "source": [
-    "%script false\n"
-   ]
+   "source": []
   }
  ],
  "metadata": {
