try new heat transfer function

--- a/Tutorial/Fun_practice.ipynb
+++ b/Tutorial/Fun_practice.ipynb
@@ -1209,9 +1209,248 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "c58bb1a7-c399-438f-a474-28eccc73f32c",
+   "metadata": {},
+   "source": [
+    "# Conductivity"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "id": "ab7c85a4-8069-41b8-8f90-af0f6481f3d7",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1\n",
+      "2\n"
+     ]
+    }
+   ],
+   "source": [
+    "Conductivity_values = [100,200]\n",
+    "\n",
+    "\n",
+    "for i in range(len(Conductivity_values)):\n",
+    "    print(i+1)"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "ab7c85a4-8069-41b8-8f90-af0f6481f3d7",
+   "id": "dcf8fe56-0796-4387-b8e4-622b93f71591",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "\n",
+    "import time\n",
+    "for i in list(range(100)):\n",
+    "  i=time.time()\n",
+    "  print(i)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "ba3fcd55-a848-4a91-b57f-e1dbc3ffb352",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from dolfinx import default_scalar_type\n",
+    "from dolfinx.fem import (Constant, dirichletbc, Function, FunctionSpace, \n",
+    "                         form,  locate_dofs_topological)\n",
+    "\n",
+    "from dolfinx.fem.petsc import LinearProblem, assemble_matrix, create_vector, assemble_vector, apply_lifting, set_bc\n",
+    "\n",
+    "from dolfinx.io import XDMFFile, gmshio\n",
+    "\n",
+    "from dolfinx.mesh import create_unit_square, locate_entities, locate_entities_boundary\n",
+    "\n",
+    "\n",
+    "from ufl import (SpatialCoordinate, TestFunction, TrialFunction,\n",
+    "                 dx, grad, inner, Measure, dot, jump, FacetNormal, avg, FiniteElement, MixedElement)\n",
+    "\n",
+    "from mpi4py import MPI\n",
+    "from petsc4py import PETSc\n",
+    "\n",
+    "import numpy as np\n",
+    "import time\n",
+    "\n",
+    "\n",
+    "def project(function, space):\n",
+    "    p = TrialFunction(space)\n",
+    "    q = TestFunction(space)\n",
+    "    a = inner(p, q) * dx\n",
+    "    L = inner(function, q) * dx\n",
+    "    problem = LinearProblem(a, L, bcs = [])\n",
+    "    return problem.solve()\n",
+    "\n",
+    "###############################################################################\n",
+    "################################# PARAMETER ###################################\n",
+    "###############################################################################\n",
+    "\n",
+    "# PhysicalProperties\n",
+    "# density (kg.m^-3) \n",
+    "rho_1 = 8000.0e-6\n",
+    "rho_2 = 8000.0e-6\n",
+    "# capacity (J/Kg.K)\n",
+    "cp_1 = 435.0e6\n",
+    "cp_2 = 435.5e6\n",
+    "# conductivity (W/m.K)\n",
+    "k_1 = 10.0e3\n",
+    "k_2 = 10.0e3\n",
+    "\n",
+    "# Boundary condtions --------------------------------------------------------- \n",
+    "# build plate temperature (K)\n",
+    "T_plate = 353.0\n",
+    "# initial temperature (K)\n",
+    "T0 = 293.0\n",
+    "T0_1 = 293.0\n",
+    "T0_2 = 320.0\n",
+    "\n",
+    "# Time  ----------------------------------------------------------------------\n",
+    "TotalTime = 1000.0\n",
+    "\n",
+    "t0=time.time()\n",
+    "    \n",
+    "num_steps = 50     # number of time steps\n",
+    "dt = TotalTime / num_steps # time step size\n",
+    "t = 0 # current time \n",
+    "\n",
+    "CYL_MARK = 2\n",
+    "EXT_MARK = 1\n",
+    "\n",
+    "FACE_MARK = 1\n",
+    "\n",
+    "###############################################################################\n",
+    "################################# Mesh ########################################\n",
+    "###############################################################################\n",
+    "\n",
+    "with XDMFFile(MPI.COMM_WORLD, \"CYL_IN_BOX_SLICE.xdmf\", \"r\") as xdmf:\n",
+    "    mesh = xdmf.read_mesh(name=\"Grid\")\n",
+    "    ct = xdmf.read_meshtags(mesh, name=\"Grid\")\n",
+    "    \n",
+    "mesh.topology.create_connectivity(mesh.topology.dim, mesh.topology.dim - 1)\n",
+    "\n",
+    "with XDMFFile(MPI.COMM_WORLD, \"facet_CYL_IN_BOX_SLICE.xdmf\", \"r\") as xdmf:\n",
+    "    ft = xdmf.read_meshtags(mesh, name=\"Grid\")\n",
+    "    \n",
+    "ds = Measure('ds', domain=mesh, subdomain_data=ft)\n",
+    "\n",
+    "###############################################################################\n",
+    "################################# MULTIDOMAIN #################################\n",
+    "###############################################################################\n",
+    "\n",
+    "RhoCp_values = [rho_1*cp_1,rho_2*cp_2]\n",
+    "Conductivity_values = [k_1,k_2]\n",
+    "Tinit_values = [T0_1,T0_2]\n",
+    "\n",
+    "Q = FunctionSpace(mesh, (\"DG\", 0))\n",
+    "Conductivity = Function(Q)\n",
+    "\n",
+    "for i in range(len(Conductivity_values)):\n",
+    "    cells = ct.find(i+1)\n",
+    "    Conductivity.x.array[cells] = np.full_like(cells, Conductivity_values[i], dtype=default_scalar_type)\n",
+    "\n",
+    "RhoCp = Function(Q)\n",
+    "for i in range(len(Conductivity_values)):\n",
+    "    cells = ct.find(i+1)\n",
+    "    RhoCp.x.array[cells] = np.full_like(cells, RhoCp_values[i], dtype=default_scalar_type)\n",
+    "\n",
+    "T_INIT = Function(Q)\n",
+    "T_INIT.name = \"Tinit\"\n",
+    "for i in range(len(Tinit_values)):\n",
+    "    cells = ct.find(i+1)\n",
+    "    T_INIT.x.array[cells] = np.full_like(cells, Tinit_values[i], dtype=default_scalar_type)\n",
+    "\n",
+    "\n",
+    "###############################################################################\n",
+    "################################# FORMULATION #################################\n",
+    "###############################################################################\n",
+    "\n",
+    "# Define variational problem\n",
+    "V = FunctionSpace(mesh, ('CG', 1))\n",
+    "u = TrialFunction(V)\n",
+    "v = TestFunction(V)\n",
+    "f = Constant(mesh, PETSc.ScalarType(0))\n",
+    "n = FacetNormal(mesh)\n",
+    "\n",
+    "\n",
+    "# initialization\n",
+    "Tinit = Function(V)\n",
+    "Tinit.name = \"Tinit\"\n",
+    "# variable, need to be projected form Q onto V\n",
+    "Tinit = project(T_INIT,V)\n",
+    "Tinit.name = \"Tinit\" \n",
+    "\n",
+    "\n",
+    "xdmf = XDMFFile(mesh.comm, \"./RES/Temperature.xdmf\", \"w\")\n",
+    "xdmf.write_mesh(mesh)\n",
+    "\n",
+    "Tinit = project(T_INIT,V)\n",
+    "Tinit.name = \"Tinit\" \n",
+    "\n",
+    "Timp_facets = ft.find(FACE_MARK)\n",
+    "Timp_dofs = locate_dofs_topological(V, mesh.topology.dim - 1, Timp_facets)\n",
+    "bc = dirichletbc(default_scalar_type(T_plate), Timp_dofs, V)\n",
+    "\n",
+    "a = RhoCp*u*v*dx \n",
+    "a += dt*dot(Conductivity*grad(u), grad(v))*dx\n",
+    "\n",
+    "L = (RhoCp*Tinit + dt * f) * v * dx\n",
+    "\n",
+    "bilinear_form = form(a)\n",
+    "linear_form = form(L)\n",
+    "\n",
+    "A = assemble_matrix(bilinear_form, bcs=[bc])\n",
+    "A.assemble()\n",
+    "b = create_vector(linear_form)\n",
+    "\n",
+    "solver = PETSc.KSP().create(mesh.comm)\n",
+    "solver.setOperators(A)\n",
+    "solver.setType(PETSc.KSP.Type.PREONLY)\n",
+    "solver.getPC().setType(PETSc.PC.Type.LU)\n",
+    "\n",
+    "# Define solution variable, and interpolate initial solution for visualization in Paraview\n",
+    "sol = Function(V)\n",
+    "sol.name = \"Temperature\"\n",
+    "sol.interpolate(Tinit)\n",
+    "\n",
+    "for i in range(num_steps):\n",
+    "    t += dt\n",
+    "    print(\"current time is \" + str(t) + \" s\")\n",
+    "    print(\"Completion is \" + str(100*(t/TotalTime))+ \" %\")\n",
+    "    # Update the right hand side reusing the initial vector\n",
+    "    with b.localForm() as loc_b:\n",
+    "        loc_b.set(0)\n",
+    "    assemble_vector(b, linear_form)\n",
+    "\n",
+    "    # Apply Dirichlet boundary condition to the vector\n",
+    "    apply_lifting(b, [bilinear_form], [[bc]])\n",
+    "    b.ghostUpdate(addv=PETSc.InsertMode.ADD_VALUES, mode=PETSc.ScatterMode.REVERSE)\n",
+    "    set_bc(b, [bc])\n",
+    "\n",
+    "    # Solve linear problem\n",
+    "    solver.solve(b, sol.vector)\n",
+    "    sol.x.scatter_forward()\n",
+    "\n",
+    "    # Update solution at previous time step (u_n)\n",
+    "    Tinit.x.array[:] = sol.x.array\n",
+    "\n",
+    "    # Write solution to file\n",
+    "    xdmf.write_function(sol, t)\n",
+    "    \n",
+    "xdmf.close()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "2a233660-6cd9-4adc-9d31-841637c80946",
    "metadata": {},
    "outputs": [],
    "source": []
