ds needs update

--- a/Tutorial/Calculation/test.ipynb
+++ b/Tutorial/Calculation/test.ipynb
@@ -2,62 +2,233 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "id": "ed51049b-b99d-420f-93d9-652830e592c0",
    "metadata": {},
    "outputs": [
     {
-     "ename": "NameError",
-     "evalue": "name 'c' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "Cell \u001b[0;32mIn[2], line 7\u001b[0m\n\u001b[1;32m      3\u001b[0m model \u001b[38;5;241m=\u001b[39m geometry\u001b[38;5;241m.\u001b[39m\u001b[38;5;21m__enter__\u001b[39m()\n\u001b[1;32m      6\u001b[0m \u001b[38;5;66;03m# Add circle\u001b[39;00m\n\u001b[0;32m----> 7\u001b[0m circle_r \u001b[38;5;241m=\u001b[39m model\u001b[38;5;241m.\u001b[39madd_circle(\u001b[43mc\u001b[49m, r, mesh_size\u001b[38;5;241m=\u001b[39mresolution)\n\u001b[1;32m      9\u001b[0m o_in \u001b[38;5;241m=\u001b[39m geometry\u001b[38;5;241m.\u001b[39madd_point([\u001b[38;5;241m-\u001b[39mL\u001b[38;5;241m/\u001b[39m\u001b[38;5;241m2\u001b[39m,\u001b[38;5;241m0\u001b[39m,\u001b[38;5;241m0\u001b[39m])\n\u001b[1;32m     10\u001b[0m o_out \u001b[38;5;241m=\u001b[39m geometry\u001b[38;5;241m.\u001b[39madd_point([L\u001b[38;5;241m/\u001b[39m\u001b[38;5;241m2\u001b[39m,\u001b[38;5;241m0\u001b[39m,\u001b[38;5;241m0\u001b[39m])\n",
-      "\u001b[0;31mNameError\u001b[0m: name 'c' is not defined"
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/home/yanjun/.local/lib/python3.10/site-packages/matplotlib/projections/__init__.py:63: UserWarning: Unable to import Axes3D. This may be due to multiple versions of Matplotlib being installed (e.g. as a system package and as a pip package). As a result, the 3D projection is not available.\n",
+      "  warnings.warn(\"Unable to import Axes3D. This may be due to multiple versions of \"\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Info    : Reading '3-10.msh'...\n",
+      "Info    : 168 entities\n",
+      "Info    : 10751 nodes\n",
+      "Info    : 43604 elements\n",
+      "Info    : Done reading '3-10.msh'\n",
+      "[(1, <function <lambda> at 0x722e04dd5ab0>)]\n",
+      "<dolfinx.mesh.MeshTags object at 0x722e04df94e0>\n"
      ]
     }
    ],
    "source": [
-    "import pygmsh\n",
-    "geometry = pygmsh.geo.Geometry()\n",
-    "model = geometry.__enter__()\n",
+    "import matplotlib.pyplot as plt\n",
+    "import pyvista\n",
+    "import ufl\n",
+    "import numpy as np\n",
+    "import dolfinx\n",
+    "from petsc4py import PETSc\n",
+    "from mpi4py import MPI\n",
+    "from dolfinx import fem, mesh, io, plot\n",
+    "from dolfinx.fem.petsc import assemble_vector, assemble_matrix, create_vector, apply_lifting, set_bc\n",
+    "import time\n",
+    "\n",
+    "# Define temporal parameters\n",
+    "# Time  ----------------------------------------------------------------------\n",
+    "t0=time.time()\n",
+    "t = 0  # Start time\n",
+    "Total_time = 5  # Final time\n",
+    "num_steps = 50\n",
+    "dt = Total_time / num_steps  # time step size\n",
+    "\n",
+    "# Boundary condtions --------------------------------------------------------- \n",
+    "# initial temperature (K), and brake pad temperature\n",
+    "Ti = 250\n",
+    "Tm = 250\n",
+    "\n",
+    "# This step is for the initial process. Variable need to be projected form Q onto V\n",
+    "def project(function, space):\n",
+    "    p = TrialFunction(space)\n",
+    "    q = TestFunction(space)\n",
+    "    a = inner(p, q) * dx\n",
+    "    L = inner(function, q) * dx\n",
+    "    problem = LinearProblem(a, L, bcs = [])\n",
+    "    return problem.solve()\n",
+    "\n",
+    "# PhysicalProperties\n",
+    "# m to mm\n",
+    "unit_m_to_mm = 1e3\n",
+    "t_u = unit_m_to_mm\n",
+    "\n",
+    "# density (kg.m^-3), capacity (J/Kg.K), conductivity (W/m.K)\n",
+    "rho , c ,k = 7850 /(t_u**3), 462 , 48 / t_u\n",
+    "mu , P_brake , v_angualr , r_disc , heat_distribution = 0.35, 246000, 48.3, 0.25, 0.88\n",
+    "h_input = mu * P_brake * v_angualr * r_disc * heat_distribution /1e9 *100\n",
+    "\n",
+    "g = h_input\n",
+    "\n",
+    "# f is the heat source,unit is w/m3\n",
+    "\n",
+    "RhoCp_values = rho *c\n",
+    "Conductivity_values = k\n",
+    "Tinit_values = Ti\n",
+    "\n",
+    "from dolfinx.io import gmshio\n",
+    "from dolfinx import plot\n",
+    "from dolfinx import default_scalar_type\n",
+    "from dolfinx.fem import (Constant, dirichletbc, Function, FunctionSpace, \n",
+    "                         form,  locate_dofs_topological)\n",
+    "from dolfinx.fem.petsc import LinearProblem, assemble_matrix, create_vector, assemble_vector, apply_lifting, set_bc\n",
+    "from dolfinx.io import XDMFFile, gmshio\n",
+    "from dolfinx.mesh import create_unit_square, locate_entities, locate_entities_boundary,meshtags\n",
+    "from ufl import (SpatialCoordinate, TestFunction, TrialFunction,\n",
+    "                 dx, grad, inner, Measure, dot, jump, FacetNormal, avg, FiniteElement, MixedElement)\n",
+    "from find_com_e import find_common_e\n",
+    "\n",
+    "filename = \"3-10\" # mesh\n",
+    "domain, cell_markers, facet_markers = gmshio.read_from_msh(filename+\".msh\", MPI.COMM_WORLD, 0, gdim=3)\n",
+    "\n",
+    "Q = FunctionSpace(domain, (\"DG\", 0))\n",
+    "Conductivity = Function(Q)\n",
+    "Conductivity.x.array[:] = np.full_like(1, Conductivity_values, dtype=default_scalar_type)\n",
+    "RhoCp = Function(Q)\n",
+    "RhoCp.x.array[:] = np.full_like(1, RhoCp_values, dtype=default_scalar_type)\n",
+    "\n",
+    "T_INIT = Function(Q)\n",
+    "T_INIT.name = \"u_n\"\n",
+    "# here 1 is the volume 1, the brake disc\n",
+    "T_INIT.x.array[:] = np.full_like(1, Tinit_values, dtype=default_scalar_type)\n",
+    "\n",
+    "fdim = domain.topology.dim - 1\n",
+    "import sys\n",
+    "# when change a new computer, below path is inconvenient, need to find a bettwe way to use this function.\n",
+    "sys.path.append('/home/yanjun/Documents/FEniCSx/Tutorial/Mesh/')\n",
+    "from rub_co import get_rub_coordinate\n",
+    "x_co, y_co = get_rub_coordinate()\n",
+    "\n",
+    "bc_list = []\n",
+    "for i, (x_c, y_c) in enumerate(zip(x_co, y_co), start=1):\n",
+    "    var_name = f\"bc_facets{i}\"    \n",
+    "    tag= mesh.locate_entities_boundary(\n",
+    "       domain, fdim, lambda x: (x[0]-x_c)**2 + (x[1]-y_c)**2  <= 324 )\n",
+    "    globals()[var_name] = tag\n",
+    "    bc_list.append(globals()[var_name])\n",
+    "    \n",
+    "# rubbing elements\n",
+    "bc_disc = mesh.locate_entities_boundary(\n",
+    "    domain, fdim , lambda x:  np.isclose(x[2], 20) )\n",
+    "\n",
+    "bc_all = find_common_e(bc_disc, bc_list)\n",
+    "x = SpatialCoordinate(domain)\n",
     "\n",
     "\n",
-    "# Add circle\n",
-    "circle_r = model.add_circle(c, r, mesh_size=resolution)\n",
     "\n",
-    "o_in = geometry.add_point([-L/2,0,0])\n",
-    "o_out = geometry.add_point([L/2,0,0])\n",
+    "boundaries = [(1, lambda x: (x[0]-x_c)**2 + (x[1]-y_c)**2  <= 324)]\n",
+    "print(boundaries)\n",
     "\n",
-    "p1 = geometry.add_point([-L/2,R,0])\n",
-    "p2 = geometry.add_point([-L/2-R,0,0])\n",
-    "p3 = geometry.add_point([-L/2,-R,0])\n",
+    "#for (marker, locator) in boundaries:\n",
+    "    #facets = locate_entities(domain, fdim, locator)\n",
+    "#print(facets)\n",
     "\n",
-    "arc_R_in_up = model.add_circle_arc(p1,o_in,p2)\n",
-    "arc_R_in_down = model.add_circle_arc(p2,o_in,p3)\n",
+    "facet_indices, facet_markers = [], []\n",
+    "fdim = 2\n",
+    "for (marker, locator) in boundaries:\n",
+    "    facets = locate_entities(domain, fdim, locator)\n",
+    "    facet_indices.append(facets)\n",
+    "    facet_markers.append(np.full_like(facets, marker))\n",
+    "facet_indices = np.hstack(facet_indices).astype(np.int32)\n",
+    "facet_markers = np.hstack(facet_markers).astype(np.int32)\n",
+    "sorted_facets = np.argsort(facet_indices)\n",
+    "facet_tag = meshtags(domain, fdim, facet_indices[sorted_facets], facet_markers[sorted_facets])\n",
     "\n",
-    "p4 = geometry.add_point([L/2,-R,0])\n",
-    "p5 = geometry.add_point([L/2+R,0,0])\n",
-    "p6 = geometry.add_point([L/2,R,0])\n",
+    "print(facet_tag)\n",
+    "#print(facet_indices)\n",
+    "ds = Measure('ds', domain=domain, subdomain_data=facet_tag)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "id": "dfa967d5-3fb4-4990-96e6-a6d0c5db2b8b",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "HDF5-DIAG: Error detected in HDF5 (1.10.7) MPI-process 0:\n",
+      "  #000: ../../../src/H5D.c line 152 in H5Dcreate2(): unable to create dataset\n",
+      "    major: Dataset\n",
+      "    minor: Unable to initialize object\n",
+      "  #001: ../../../src/H5Dint.c line 338 in H5D__create_named(): unable to create and link to dataset\n",
+      "    major: Dataset\n",
+      "    minor: Unable to initialize object\n",
+      "  #002: ../../../src/H5L.c line 1605 in H5L_link_object(): unable to create new link to object\n",
+      "    major: Links\n",
+      "    minor: Unable to initialize object\n",
+      "  #003: ../../../src/H5L.c line 1846 in H5L__create_real(): can't insert link\n",
+      "    major: Links\n",
+      "    minor: Unable to insert object\n",
+      "  #004: ../../../src/H5Gtraverse.c line 848 in H5G_traverse(): internal path traversal failed\n",
+      "    major: Symbol table\n",
+      "    minor: Object not found\n",
+      "  #005: ../../../src/H5Gtraverse.c line 624 in H5G__traverse_real(): traversal operator failed\n",
+      "    major: Symbol table\n",
+      "    minor: Callback failed\n",
+      "  #006: ../../../src/H5L.c line 1641 in H5L__link_cb(): name already exists\n",
+      "    major: Links\n",
+      "    minor: Object already exists\n"
+     ]
+    },
+    {
+     "ename": "RuntimeError",
+     "evalue": "Failed to create HDF5 global dataset.",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mRuntimeError\u001b[0m                              Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[4], line 18\u001b[0m\n\u001b[1;32m     16\u001b[0m uh\u001b[38;5;241m.\u001b[39mname \u001b[38;5;241m=\u001b[39m \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124muh\u001b[39m\u001b[38;5;124m\"\u001b[39m\n\u001b[1;32m     17\u001b[0m uh \u001b[38;5;241m=\u001b[39m project(T_INIT,V)\n\u001b[0;32m---> 18\u001b[0m \u001b[43mxdmf\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mwrite_function\u001b[49m\u001b[43m(\u001b[49m\u001b[43muh\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mt\u001b[49m\u001b[43m)\u001b[49m\n\u001b[1;32m     20\u001b[0m \u001b[38;5;66;03m# assembly matrix and vector\u001b[39;00m\n\u001b[1;32m     21\u001b[0m bilinear_form \u001b[38;5;241m=\u001b[39m fem\u001b[38;5;241m.\u001b[39mform(a)\n",
+      "File \u001b[0;32m/usr/lib/petsc/lib/python3/dist-packages/dolfinx/io/utils.py:235\u001b[0m, in \u001b[0;36mXDMFFile.write_function\u001b[0;34m(self, u, t, mesh_xpath)\u001b[0m\n\u001b[1;32m    219\u001b[0m \u001b[38;5;28;01mdef\u001b[39;00m \u001b[38;5;21mwrite_function\u001b[39m(\u001b[38;5;28mself\u001b[39m, u: Function, t: \u001b[38;5;28mfloat\u001b[39m \u001b[38;5;241m=\u001b[39m \u001b[38;5;241m0.0\u001b[39m, mesh_xpath\u001b[38;5;241m=\u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124m/Xdmf/Domain/Grid[@GridType=\u001b[39m\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mUniform\u001b[39m\u001b[38;5;124m'\u001b[39m\u001b[38;5;124m][1]\u001b[39m\u001b[38;5;124m\"\u001b[39m):\n\u001b[1;32m    220\u001b[0m \u001b[38;5;250m    \u001b[39m\u001b[38;5;124;03m\"\"\"Write function to file for a given time.\u001b[39;00m\n\u001b[1;32m    221\u001b[0m \n\u001b[1;32m    222\u001b[0m \u001b[38;5;124;03m    Note:\u001b[39;00m\n\u001b[0;32m   (...)\u001b[0m\n\u001b[1;32m    233\u001b[0m \n\u001b[1;32m    234\u001b[0m \u001b[38;5;124;03m    \"\"\"\u001b[39;00m\n\u001b[0;32m--> 235\u001b[0m     \u001b[38;5;28;43msuper\u001b[39;49m\u001b[43m(\u001b[49m\u001b[43m)\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mwrite_function\u001b[49m\u001b[43m(\u001b[49m\u001b[38;5;28;43mgetattr\u001b[39;49m\u001b[43m(\u001b[49m\u001b[43mu\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[38;5;124;43m_cpp_object\u001b[39;49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mu\u001b[49m\u001b[43m)\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mt\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mmesh_xpath\u001b[49m\u001b[43m)\u001b[49m\n",
+      "\u001b[0;31mRuntimeError\u001b[0m: Failed to create HDF5 global dataset."
+     ]
+    }
+   ],
+   "source": [
+    "xdmf = io.XDMFFile(domain.comm, \"temperature4.xdmf\", \"w\")\n",
+    "xdmf.write_mesh(domain)\n",
+    "V = fem.FunctionSpace(domain, ('CG', 1))\n",
+    "uh = fem.Function(V)\n",
+    "uh.name = \"uh\"\n",
+    "uh = project(T_INIT,V)\n",
+    "xdmf.write_function(uh, t)\n",
     "\n",
-    "arc_R_out_down = model.add_circle_arc(p4,o_out,p5)\n",
-    "arc_R_out_up = model.add_circle_arc(p5,o_out,p6)\n",
     "\n",
-    "channel_lines = [arc_R_in_up, arc_R_in_down, model.add_line(p3, p4), arc_R_out_down, arc_R_out_up, model.add_line(p6,p1)]\n",
+    "# Define solution variable, and interpolate initial solution for visualization in Paraview\n",
     "\n",
-    "plane_surface = model.add_plane_surface(channel_loop, holes=[circle_r.curve_loop])\n",
+    "#uh.interpolate(initial_condition)\n",
+    "#uh.interpolate(Tinit)\n",
     "\n",
-    "model.synchronize()\n",
+    "uh = fem.Function(V)\n",
+    "uh.name = \"uh\"\n",
+    "uh = project(T_INIT,V)\n",
+    "xdmf.write_function(uh, t)\n",
     "\n",
-    "model.add_physical([plane_surface], \"My Volume\")\n",
-    "model.add_physical(circle_r.curve_loop.curves, \"My Obstacle\")"
+    "# assembly matrix and vector\n",
+    "bilinear_form = fem.form(a)\n",
+    "linear_form = fem.form(L)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "dfa967d5-3fb4-4990-96e6-a6d0c5db2b8b",
+   "id": "c70b616e-1084-46b6-a0bd-95e8d77cacdd",
    "metadata": {},
    "outputs": [],
    "source": []
