neumann success for one rub

--- a/Tutorial/Fun_practice.ipynb
+++ b/Tutorial/Fun_practice.ipynb
@@ -69,6 +69,30 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 6,
+   "id": "8bab890c-a30d-4000-82b8-42a5051bf939",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1\n",
+      "4\n",
+      "11\n",
+      "26\n"
+     ]
+    }
+   ],
+   "source": [
+    "a = 0\n",
+    "for i in list(range(1,5)):\n",
+    "   a +=  i\n",
+    "   print(a)\n"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "id": "dfef8ee5-6f75-4bb8-9b49-e42d0e0c4500",
    "metadata": {},
