--- a/Tutorial/Official/robin_neumann_dirichlet.ipynb
+++ b/Tutorial/Official/robin_neumann_dirichlet.ipynb
@@ -203,14 +203,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[(1, <function <lambda> at 0x75a8fd0870a0>), (2, <function <lambda> at 0x75a8fd084b80>), (3, <function <lambda> at 0x75a8fd087130>), (4, <function <lambda> at 0x75a8fd086710>)]\n"
+      "[(1, <function <lambda> at 0x7e108319e8c0>), (2, <function <lambda> at 0x7e108319e950>), (3, <function <lambda> at 0x7e108319f5b0>), (4, <function <lambda> at 0x7e108319fac0>)]\n"
      ]
     }
    ],
@@ -227,7 +227,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -245,7 +245,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -257,7 +257,7 @@
       " 4 4 4]\n",
       "[20 21 10 11 22 12 23 13 24 14 25 15 26 16 27 17 28 18 29 19  0 30  1 31\n",
       "  2 32  3 33  4 34  5 35  6 36  7 37  8 38  9 39]\n",
-      "<dolfinx.mesh.MeshTags object at 0x75a8f2eaa590>\n"
+      "<dolfinx.mesh.MeshTags object at 0x7e10831a2fe0>\n"
      ]
     }
    ],
@@ -278,7 +278,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -290,21 +290,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[1 1 1 1 1 1 1 1 1 1 2 2 2 2 2 2 2 2 2 2 3 3 3 3 3 3 3 3 3 3 4 4 4 4 4 4 4\n",
-      " 4 4 4]\n"
-     ]
-    }
-   ],
-   "source": [
-    "print(facet_markers)"
-   ]
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "markdown",
@@ -315,28 +304,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
+    "\n",
+    "\n",
     "ds = Measure(\"ds\", domain=mesh, subdomain_data=facet_tag)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "ds(subdomain_id=everywhere, domain=<Mesh #0>, subdomain_data=<dolfinx.mesh.MeshTags object at 0x75a8f2eaa590>)\n"
+      "ds(subdomain_id=3, domain=<Mesh #0>, subdomain_data=<dolfinx.mesh.MeshTags object at 0x7e10831a2fe0>)\n",
+      "ds(subdomain_id=4, domain=<Mesh #0>, subdomain_data=<dolfinx.mesh.MeshTags object at 0x7e10831a2fe0>)\n"
      ]
     }
    ],
    "source": [
-    "print(ds)"
+    "print(ds(3))  # Neumann\n",
+    "print(ds(4))"
    ]
   },
   {
@@ -348,7 +341,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -377,9 +370,29 @@
     "\n",
     "# Define the Dirichlet condition\n",
     "boundary_conditions = [BoundaryCondition(\"Dirichlet\", 1, u_ex),\n",
-    "                       BoundaryCondition(\"Dirichlet\", 2, u_ex),\n",
-    "                       BoundaryCondition(\"Robin\", 3, (r, s)),\n",
+    "                       BoundaryCondition(\"Neumann\", 2, g),\n",
+    "                       BoundaryCondition(\"Neumann\", 3, g),\n",
     "                       BoundaryCondition(\"Neumann\", 4, g)]\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "ds(subdomain_id=3, domain=<Mesh #0>, subdomain_data=<dolfinx.mesh.MeshTags object at 0x7e10831a2fe0>)\n",
+      "ds(subdomain_id=4, domain=<Mesh #0>, subdomain_data=<dolfinx.mesh.MeshTags object at 0x7e10831a2fe0>)\n"
+     ]
+    }
+   ],
+   "source": [
+    "\n",
+    "print(ds(3))\n",
+    "print(ds(4))"
    ]
   },
   {
@@ -405,7 +418,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -414,7 +427,9 @@
      "text": [
       "{ c_0 * (conj(((grad(v_0)) : (grad(v_1))))) } * dx(<Mesh #0>[everywhere], {})\n",
       "  +  { -1 * -1 * (div(grad(1 + x[0] ** 2 + 2 * x[1] ** 2))) * (conj((v_0))) } * dx(<Mesh #0>[everywhere], {})\n",
-      "  +  { c_1 * (v_1 + -1 * (1 + x[0] ** 2 + 2 * x[1] ** 2)) * (conj((v_0))) } * ds(<Mesh #0>[3], {})\n",
+      "  +  { -1 * ((n) . (grad(1 + x[0] ** 2 + 2 * x[1] ** 2))) * (conj((v_0))) } * ds(<Mesh #0>[1], {})\n",
+      "  +  { -1 * ((n) . (grad(1 + x[0] ** 2 + 2 * x[1] ** 2))) * (conj((v_0))) } * ds(<Mesh #0>[2], {})\n",
+      "  +  { -1 * ((n) . (grad(1 + x[0] ** 2 + 2 * x[1] ** 2))) * (conj((v_0))) } * ds(<Mesh #0>[3], {})\n",
       "  +  { -1 * ((n) . (grad(1 + x[0] ** 2 + 2 * x[1] ** 2))) * (conj((v_0))) } * ds(<Mesh #0>[4], {})\n"
      ]
     }
@@ -432,18 +447,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "3b9b356c5aed42b0bf87d2267f2e1d76",
+       "model_id": "3f7056b1e44a4364983526688338bfcf",
        "version_major": 2,
        "version_minor": 0
       },
       "text/plain": [
-       "Widget(value='<iframe src=\"http://localhost:41747/index.html?ui=P_0x75a8f2fd0730_0&reconnect=auto\" class=\"pyvi…"
+       "Widget(value='<iframe src=\"http://localhost:42353/index.html?ui=P_0x7e10831f9a80_0&reconnect=auto\" class=\"pyvi…"
       ]
      },
      "metadata": {},
@@ -475,6 +490,27 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{ -1 * -1 * -1 * (sum_{i_{32}} (({ A | A_{i_{40}, i_{49}} = ({ A | A_{i_{48}} = 2 * ({ A | A_{i_{47}} = ({ A | A_{i_{39}, i_{46}} = ({ A | A_{i_{45}} = ({ A | A_{i_{37}} = I[1, i_{37}] })[i_{45}] * ({ A | A_{i_{38}} = 2 * ({ A | A_{i_{37}} = I[1, i_{37}] })[i_{38}] })[i_{39}] })[i_{46}] })[i_{40}, i_{47}] })[i_{48}] })[i_{49}] }) + ({ A | A_{i_{43}, i_{52}} = ({ A | A_{i_{51}} = ({ A | A_{i_{41}} = I[0, i_{41}] })[i_{51}] * ({ A | A_{i_{42}} = 2 * ({ A | A_{i_{41}} = I[0, i_{41}] })[i_{42}] })[i_{43}] })[i_{52}] }))[i_{32}, i_{32}] ) * (conj((v_0))) } * dx(<Mesh #0>[everywhere], {})\n",
+      "  +  { -1 * -1 * (sum_{i_{33}} n[i_{33}] * (({ A | A_{i_{43}} = x[0] * ({ A | A_{i_{42}} = 2 * ({ A | A_{i_{41}} = I[0, i_{41}] })[i_{42}] })[i_{43}] }) + ({ A | A_{i_{40}} = 2 * ({ A | A_{i_{39}} = x[1] * ({ A | A_{i_{38}} = 2 * ({ A | A_{i_{37}} = I[1, i_{37}] })[i_{38}] })[i_{39}] })[i_{40}] }))[i_{33}] ) * (conj((v_0))) } * ds(<Mesh #0>[1], {})\n",
+      "  +  { -1 * -1 * (sum_{i_{34}} n[i_{34}] * (({ A | A_{i_{43}} = x[0] * ({ A | A_{i_{42}} = 2 * ({ A | A_{i_{41}} = I[0, i_{41}] })[i_{42}] })[i_{43}] }) + ({ A | A_{i_{40}} = 2 * ({ A | A_{i_{39}} = x[1] * ({ A | A_{i_{38}} = 2 * ({ A | A_{i_{37}} = I[1, i_{37}] })[i_{38}] })[i_{39}] })[i_{40}] }))[i_{34}] ) * (conj((v_0))) } * ds(<Mesh #0>[2], {})\n",
+      "  +  { -1 * -1 * (sum_{i_{35}} n[i_{35}] * (({ A | A_{i_{43}} = x[0] * ({ A | A_{i_{42}} = 2 * ({ A | A_{i_{41}} = I[0, i_{41}] })[i_{42}] })[i_{43}] }) + ({ A | A_{i_{40}} = 2 * ({ A | A_{i_{39}} = x[1] * ({ A | A_{i_{38}} = 2 * ({ A | A_{i_{37}} = I[1, i_{37}] })[i_{38}] })[i_{39}] })[i_{40}] }))[i_{35}] ) * (conj((v_0))) } * ds(<Mesh #0>[3], {})\n",
+      "  +  { -1 * -1 * (sum_{i_{36}} n[i_{36}] * (({ A | A_{i_{43}} = x[0] * ({ A | A_{i_{42}} = 2 * ({ A | A_{i_{41}} = I[0, i_{41}] })[i_{42}] })[i_{43}] }) + ({ A | A_{i_{40}} = 2 * ({ A | A_{i_{39}} = x[1] * ({ A | A_{i_{38}} = 2 * ({ A | A_{i_{37}} = I[1, i_{37}] })[i_{38}] })[i_{39}] })[i_{40}] }))[i_{36}] ) * (conj((v_0))) } * ds(<Mesh #0>[4], {})\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(L)"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -484,7 +520,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 17,
    "metadata": {
     "lines_to_next_cell": 0
    },
@@ -493,8 +529,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Error_L2 : 4.86e-03\n",
-      "Error_max : 2.07e-03\n"
+      "Error_L2 : inf\n",
+      "Error_max : inf\n"
      ]
     }
    ],
