--- a/Tutorial/Calculation/Disc3_Neumann.ipynb
+++ b/Tutorial/Calculation/Disc3_Neumann.ipynb
@@ -32,7 +32,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -101,7 +101,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -127,7 +127,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -172,7 +172,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -216,7 +216,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -268,16 +268,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[(101, <function <lambda> at 0x76557210caf0>)]\n",
-      "<dolfinx.mesh.MeshTags object at 0x76557f4c7eb0>\n",
-      "ds(subdomain_id=everywhere, domain=<Mesh #0>, subdomain_data=<dolfinx.mesh.MeshTags object at 0x76557f4c7eb0>)\n"
+      "[(101, <function <lambda> at 0x7bb661549990>)]\n",
+      "<dolfinx.mesh.MeshTags object at 0x7bb6615104f0>\n",
+      "ds(subdomain_id=everywhere, domain=<Mesh #0>, subdomain_data=<dolfinx.mesh.MeshTags object at 0x7bb6615104f0>)\n"
      ]
     }
    ],
@@ -322,19 +322,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "<dolfinx.mesh.Mesh object at 0x765573fe4fd0>\n"
+      "0.0\n",
+      "0.0\n",
+      "0.0\n"
      ]
     }
    ],
    "source": [
-    "print(domain)"
+    "print(dolfinx.fem.assemble_scalar(dolfinx.fem.form(1*ds(10))) )\n",
+    "print( dolfinx.fem.assemble_scalar(dolfinx.fem.form(1*ds(30))) )\n",
+    "print( dolfinx.fem.assemble_scalar(dolfinx.fem.form(1*ds(20))) )"
    ]
   },
   {
